build/xtask/tests/snapshots/i2c_codegen__app_sidecar_rev-d-dev.toml.controllers-Target.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---

#[allow(dead_code)]
pub const NCONTROLLERS: usize = 0;

use drv_stm32xx_i2c::I2cController;

pub fn controllers() -> [I2cController<'static>; NCONTROLLERS] {
    []
}
