build/xtask/tests/snapshots/i2c_codegen__app_sidecar_rev-d-dev.toml.muxes-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
#[allow(dead_code)]
pub const NMUXEDBUSES: usize = 2;
use drv_stm32xx_i2c::I2cMux;
pub fn muxes() -> [I2cMux<'static>; 2] {
    use drv_i2c_api::{Controller, Mux, PortIndex};
    #[allow(unused_imports)]
    use drv_stm32xx_sys_api::{self as gpio_api, Alternate};
    [
        I2cMux {
            controller: Controller::I2C1,
            port: PortIndex(0),
            id: Mux::M1,
            driver: &drv_stm32xx_i2c::pca9545::Pca9545,
            nreset: None,
            address: 0x70,
        },
        I2cMux {
            controller: Controller::I2C3,
            port: PortIndex(1),
            id: Mux::M1,
            driver: &drv_stm32xx_i2c::pca9545::Pca9545,
            nreset: None,
            address: 0x70,
        },
    ]
}
