build/xtask/tests/snapshots/i2c_codegen__app_sidecar_rev-d-dev.toml.ports-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---

    pub mod ports {

        #[allow(dead_code)]
        pub const fn i2c1_b_1() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c1_b_2() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(1)
        }

        #[allow(dead_code)]
        pub const fn i2c2_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c2_h() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(1)
        }

        #[allow(dead_code)]
        pub const fn i2c3_c() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c3_h() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(1)
        }

        #[allow(dead_code)]
        pub const fn i2c4_d() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(0)
        }

        #[allow(dead_code)]
        pub const fn i2c4_f() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(1)
        }

        #[allow(dead_code)]
        pub const fn i2c4_h() -> drv_i2c_api::PortIndex {
            drv_i2c_api::PortIndex(2)
        }
    }
