build/xtask/tests/snapshots/i2c_codegen__app_sidecar_rev-d-dev.toml.sensor-id-to-component-id-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_COMPONENT_ID_LEN: usize = 8;
pub const SENSOR_ID_TO_COMPONENT_ID: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_COMPONENT_ID_LEN,
>; 107] = [
    fixedstr::FixedStr::from_str("U6"),
    fixedstr::FixedStr::from_str("U6"),
    fixedstr::FixedStr::from_str("U6"),
    fixedstr::FixedStr::from_str("U66"),
    fixedstr::FixedStr::from_str("U66"),
    fixedstr::FixedStr::from_str("U66"),
    fixedstr::FixedStr::from_str("U66"),
    fixedstr::FixedStr::from_str("J69"),
    fixedstr::FixedStr::from_str("U31"),
    fixedstr::FixedStr::from_str("U31"),
    fixedstr::FixedStr::from_str("U31"),
    fixedstr::FixedStr::from_str("U4"),
    fixedstr::FixedStr::from_str("U4"),
    fixedstr::FixedStr::from_str("U4"),
    fixedstr::FixedStr::from_str("U19"),
    fixedstr::FixedStr::from_str("U19"),
    fixedstr::FixedStr::from_str("U19"),
    fixedstr::FixedStr::from_str("J70"),
    fixedstr::FixedStr::from_str("U2"),
    fixedstr::FixedStr::from_str("U2"),
    fixedstr::FixedStr::from_str("U2"),
    fixedstr::FixedStr::from_str("U18"),
    fixedstr::FixedStr::from_str("U18"),
    fixedstr::FixedStr::from_str("U18"),
    fixedstr::FixedStr::from_str("J68"),
    fixedstr::FixedStr::from_str("U64"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U32"),
    fixedstr::FixedStr::from_str("U12"),
    fixedstr::FixedStr::from_str("U12"),
    fixedstr::FixedStr::from_str("U12"),
    fixedstr::FixedStr::from_str("U12"),
    fixedstr::FixedStr::from_str("U8"),
    fixedstr::FixedStr::from_str("U8"),
    fixedstr::FixedStr::from_str("U8"),
    fixedstr::FixedStr::from_str("U10"),
    fixedstr::FixedStr::from_str("U10"),
    fixedstr::FixedStr::from_str("U10"),
    fixedstr::FixedStr::from_str("J67"),
    fixedstr::FixedStr::from_str("U78"),
    fixedstr::FixedStr::from_str("U78"),
    fixedstr::FixedStr::from_str("U78"),
    fixedstr::FixedStr::from_str("U78"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U33"),
    fixedstr::FixedStr::from_str("U647"),
    fixedstr::FixedStr::from_str("U647"),
    fixedstr::FixedStr::from_str("J71"),
    fixedstr::FixedStr::from_str("J73"),
    fixedstr::FixedStr::from_str("J72"),
    fixedstr::FixedStr::from_str("U21"),
    fixedstr::FixedStr::from_str("U21"),
    fixedstr::FixedStr::from_str("U21"),
    fixedstr::FixedStr::from_str("U20"),
    fixedstr::FixedStr::from_str("U20"),
    fixedstr::FixedStr::from_str("U20"),
    fixedstr::FixedStr::from_str("U65"),
    fixedstr::FixedStr::from_str("J61/U7"),
    fixedstr::FixedStr::from_str("J61/U7"),
    fixedstr::FixedStr::from_str("J61/U7"),
    fixedstr::FixedStr::from_str("J61/U15"),
    fixedstr::FixedStr::from_str("J61/U15"),
    fixedstr::FixedStr::from_str("J61/U15"),
    fixedstr::FixedStr::from_str("J61/U18"),
    fixedstr::FixedStr::from_str("J61/U18"),
    fixedstr::FixedStr::from_str("J61/U18"),
    fixedstr::FixedStr::from_str("J61/J13A"),
    fixedstr::FixedStr::from_str("J61/J13B"),
    fixedstr::FixedStr::from_str("J61/J14A"),
    fixedstr::FixedStr::from_str("J61/J14B"),
    fixedstr::FixedStr::from_str("J61/J15A"),
    fixedstr::FixedStr::from_str("J61/J15B"),
    fixedstr::FixedStr::from_str("J61/J16A"),
    fixedstr::FixedStr::from_str("J61/J16B"),
    fixedstr::FixedStr::from_str("J61/J17A"),
    fixedstr::FixedStr::from_str("J61/J17B"),
    fixedstr::FixedStr::from_str("J61/J18A"),
    fixedstr::FixedStr::from_str("J61/J18B"),
    fixedstr::FixedStr::from_str("J61/J19A"),
    fixedstr::FixedStr::from_str("J61/J19B"),
    fixedstr::FixedStr::from_str("J61/J20A"),
    fixedstr::FixedStr::from_str("J61/J20B"),
    fixedstr::FixedStr::from_str("J61/J21B"),
    fixedstr::FixedStr::from_str("J61/J21A"),
    fixedstr::FixedStr::from_str("J61/J22B"),
    fixedstr::FixedStr::from_str("J61/J22A"),
    fixedstr::FixedStr::from_str("J61/J23B"),
    fixedstr::FixedStr::from_str("J61/J23A"),
    fixedstr::FixedStr::from_str("J61/J24B"),
    fixedstr::FixedStr::from_str("J61/J24A"),
    fixedstr::FixedStr::from_str("J61/J25B"),
    fixedstr::FixedStr::from_str("J61/J25A"),
    fixedstr::FixedStr::from_str("J61/J26B"),
    fixedstr::FixedStr::from_str("J61/J26A"),
    fixedstr::FixedStr::from_str("J61/J27B"),
    fixedstr::FixedStr::from_str("J61/J28A"),
    fixedstr::FixedStr::from_str("J61/J28B"),
    fixedstr::FixedStr::from_str("J61/J28A"),
    fixedstr::FixedStr::from_str("FAN_CTRL"),
];
