build/xtask/tests/snapshots/i2c_codegen__app_sidecar_rev-d-dev.toml.sensor-id-to-name-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_NAME_LEN: usize = 17;
pub const SENSOR_ID_TO_NAME: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_NAME_LEN,
>; 107] = [
    fixedstr::FixedStr::from_str("V54_FAN1"),
    fixedstr::FixedStr::from_str("V54_FAN1"),
    fixedstr::FixedStr::from_str("V54_FAN1"),
    fixedstr::FixedStr::from_str("ESE_fan0"),
    fixedstr::FixedStr::from_str("ENE_fan0"),
    fixedstr::FixedStr::from_str("SE_fan1"),
    fixedstr::FixedStr::from_str("NE_fan1"),
    fixedstr::FixedStr::from_str("NNE"),
    fixedstr::FixedStr::from_str("V0P8_TF2_VDD_CORE"),
    fixedstr::FixedStr::from_str("V0P8_TF2_VDD_CORE"),
    fixedstr::FixedStr::from_str("V0P8_TF2_VDD_CORE"),
    fixedstr::FixedStr::from_str("V54_FAN0"),
    fixedstr::FixedStr::from_str("V54_FAN0"),
    fixedstr::FixedStr::from_str("V54_FAN0"),
    fixedstr::FixedStr::from_str("V3P3_SYS"),
    fixedstr::FixedStr::from_str("V3P3_SYS"),
    fixedstr::FixedStr::from_str("V3P3_SYS"),
    fixedstr::FixedStr::from_str("Northeast"),
    fixedstr::FixedStr::from_str("V54_HSC"),
    fixedstr::FixedStr::from_str("V54_HSC"),
    fixedstr::FixedStr::from_str("V54_HSC"),
    fixedstr::FixedStr::from_str("V5P0_SYS"),
    fixedstr::FixedStr::from_str("V5P0_SYS"),
    fixedstr::FixedStr::from_str("V5P0_SYS"),
    fixedstr::FixedStr::from_str("NNW"),
    fixedstr::FixedStr::from_str("tf2"),
    fixedstr::FixedStr::from_str("V0P9_TF2_VDDT"),
    fixedstr::FixedStr::from_str("V1P5_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V0P9_TF2_VDDT"),
    fixedstr::FixedStr::from_str("V1P5_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V0P9_TF2_VDDT"),
    fixedstr::FixedStr::from_str("V1P5_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V12P0_SYS"),
    fixedstr::FixedStr::from_str("V12P0_SYS"),
    fixedstr::FixedStr::from_str("V12P0_SYS"),
    fixedstr::FixedStr::from_str("V12P0_SYS"),
    fixedstr::FixedStr::from_str("V54_FAN2"),
    fixedstr::FixedStr::from_str("V54_FAN2"),
    fixedstr::FixedStr::from_str("V54_FAN2"),
    fixedstr::FixedStr::from_str("V54_FAN3"),
    fixedstr::FixedStr::from_str("V54_FAN3"),
    fixedstr::FixedStr::from_str("V54_FAN3"),
    fixedstr::FixedStr::from_str("Northwest"),
    fixedstr::FixedStr::from_str("SW_fan2"),
    fixedstr::FixedStr::from_str("NW_fan2"),
    fixedstr::FixedStr::from_str("WSW_fan3"),
    fixedstr::FixedStr::from_str("WNW_fan3"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDD"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDD"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDD"),
    fixedstr::FixedStr::from_str("V1P8_TF2_VDDA"),
    fixedstr::FixedStr::from_str("V12P0_FRONT_IO"),
    fixedstr::FixedStr::from_str("V12P0_FRONT_IO"),
    fixedstr::FixedStr::from_str("South"),
    fixedstr::FixedStr::from_str("Southeast"),
    fixedstr::FixedStr::from_str("Southwest"),
    fixedstr::FixedStr::from_str("V1P0_MGMT"),
    fixedstr::FixedStr::from_str("V1P0_MGMT"),
    fixedstr::FixedStr::from_str("V1P0_MGMT"),
    fixedstr::FixedStr::from_str("V1P8_SYS"),
    fixedstr::FixedStr::from_str("V1P8_SYS"),
    fixedstr::FixedStr::from_str("V1P8_SYS"),
    fixedstr::FixedStr::from_str("vsc7448"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A2"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A2"),
    fixedstr::FixedStr::from_str("V3P3_SYS_A2"),
    fixedstr::FixedStr::from_str("V3P3_QSFP0_A0"),
    fixedstr::FixedStr::from_str("V3P3_QSFP0_A0"),
    fixedstr::FixedStr::from_str("V3P3_QSFP0_A0"),
    fixedstr::FixedStr::from_str("V3P3_QSFP1_A0"),
    fixedstr::FixedStr::from_str("V3P3_QSFP1_A0"),
    fixedstr::FixedStr::from_str("V3P3_QSFP1_A0"),
    fixedstr::FixedStr::from_str("xcvr0"),
    fixedstr::FixedStr::from_str("xcvr1"),
    fixedstr::FixedStr::from_str("xcvr2"),
    fixedstr::FixedStr::from_str("xcvr3"),
    fixedstr::FixedStr::from_str("xcvr4"),
    fixedstr::FixedStr::from_str("xcvr5"),
    fixedstr::FixedStr::from_str("xcvr6"),
    fixedstr::FixedStr::from_str("xcvr7"),
    fixedstr::FixedStr::from_str("xcvr8"),
    fixedstr::FixedStr::from_str("xcvr9"),
    fixedstr::FixedStr::from_str("xcvr10"),
    fixedstr::FixedStr::from_str("xcvr11"),
    fixedstr::FixedStr::from_str("xcvr12"),
    fixedstr::FixedStr::from_str("xcvr13"),
    fixedstr::FixedStr::from_str("xcvr14"),
    fixedstr::FixedStr::from_str("xcvr15"),
    fixedstr::FixedStr::from_str("xcvr16"),
    fixedstr::FixedStr::from_str("xcvr17"),
    fixedstr::FixedStr::from_str("xcvr18"),
    fixedstr::FixedStr::from_str("xcvr19"),
    fixedstr::FixedStr::from_str("xcvr20"),
    fixedstr::FixedStr::from_str("xcvr21"),
    fixedstr::FixedStr::from_str("xcvr22"),
    fixedstr::FixedStr::from_str("xcvr23"),
    fixedstr::FixedStr::from_str("xcvr24"),
    fixedstr::FixedStr::from_str("xcvr25"),
    fixedstr::FixedStr::from_str("xcvr26"),
    fixedstr::FixedStr::from_str("xcvr27"),
    fixedstr::FixedStr::from_str("xcvr28"),
    fixedstr::FixedStr::from_str("xcvr29"),
    fixedstr::FixedStr::from_str("xcvr30"),
    fixedstr::FixedStr::from_str("xcvr31"),
    fixedstr::FixedStr::from_str("fan_ctrl"),
];
